Fix outline focus clipping outside the navbar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,7 +14,7 @@
   @media (min-width: 980px) {
     flex-direction: row;
     padding-block: 0;
-    height: 4rem;
+    height: 5rem;
   }
 }
 
@@ -125,6 +125,7 @@
 
     ul {
       height: 100%;
+      padding-block: var(--space-base);
     }
 
     a {
@@ -132,22 +133,26 @@
       display: flex;
       position: relative;
       align-items: center;
+      padding-inline: var(--space-xs);
 
       div {
+        --line-height: 0.25rem;
         position: absolute;
-        top: 0;
+        bottom: calc(100% + var(--space-base) - var(--line-height));
         inset-inline: 0;
-        height: 0.25rem;
+        height: var(--line-height);
         opacity: 0;
       }
 
       span {
-        opacity: 1;
+        opacity: 0.75;
         transition: opacity 150ms linear;
       }
 
       &[aria-current='page'] {
-        cursor: not-allowed;
+        span {
+          opacity: 1;
+        }
         div {
           opacity: 1;
         }
@@ -155,7 +160,7 @@
 
       &:hover {
         span {
-          opacity: 0.5;
+          opacity: 1;
         }
       }
     }
